[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "alphaone2468",email = "129504534+alphaone2468@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython (>=1.85,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_fetcher", from = "src"}]

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.command_line:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
